; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_input.c_UpdateGenericFromDemux.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_input.c_UpdateGenericFromDemux.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32* }

@INPUT_UPDATE_META = common dso_local global i32 0, align 4
@DEMUX_GET_SIGNAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @UpdateGenericFromDemux to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @UpdateGenericFromDemux(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call %struct.TYPE_4__* @input_priv(i32* %6)
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  store i32* %11, i32** %3, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = load i32, i32* @INPUT_UPDATE_META, align 4
  %14 = call i64 @demux_TestAndClearFlags(i32* %12, i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %1
  %17 = load i32*, i32** %2, align 8
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @InputUpdateMeta(i32* %17, i32* %18)
  br label %20

20:                                               ; preds = %16, %1
  %21 = load i32*, i32** %3, align 8
  %22 = load i32, i32* @DEMUX_GET_SIGNAL, align 4
  %23 = call i32 @demux_Control(i32* %21, i32 %22, double* %4, double* %5)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %30, label %25

25:                                               ; preds = %20
  %26 = load i32*, i32** %2, align 8
  %27 = load double, double* %4, align 8
  %28 = load double, double* %5, align 8
  %29 = call i32 @input_SendEventSignal(i32* %26, double %27, double %28)
  br label %30

30:                                               ; preds = %25, %20
  ret void
}

declare dso_local %struct.TYPE_4__* @input_priv(i32*) #1

declare dso_local i64 @demux_TestAndClearFlags(i32*, i32) #1

declare dso_local i32 @InputUpdateMeta(i32*, i32*) #1

declare dso_local i32 @demux_Control(i32*, i32, double*, double*) #1

declare dso_local i32 @input_SendEventSignal(i32*, double, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
